--- a/lesson3_naivebayes_exercises.ipynb
+++ b/lesson3_naivebayes_exercises.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -310,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "Counter({'apple': 4, 'apricot': 3, 'plum': 2, 'banana': 1})\n"
      ]
     }
    ],
@@ -333,10 +333,11 @@
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
+    "fruit_counter = Counter()\n",
     "for fruit in fruit_basket:\n",
-    "    fruit_counter=Counter()\n",
-    "    fruit_counter[fruit]+=1\n",
-    "    print(fruit_counter[fruit])\n",
+    "    fruit_counter[fruit] += 1\n",
+    "    \n",
+    "print(fruit_counter)\n",
     "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +435,7 @@
        "dict_items([('1 queen-sized bed', 25), ('1 king-sized bed', 14), ('2 queen-sized beds', 12), ('Honeymoon suite', 1), ('Presidential suite', 1)])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -524,15 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({'cat': 4, 'dog': 3, 'lizard': 1, 'snake': 1, 'parrot': 1})\n",
-      "dict_values([4, 1, 3, 1, 1])\n",
       "10\n",
       "CORRECT\n"
      ]
@@ -590,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -676,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -712,15 +711,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'blue': 0.39, 'green': 0.27, 'red': 0.1, 'orange': 0.23, 'yellow': 0.01}\n",
-      "{'blue': 0.05, 'green': 0.09, 'red': 0.53, 'orange': 0.08, 'yellow': 0.25}\n"
+      "{'green': 0.27, 'yellow': 0.01, 'orange': 0.23, 'blue': 0.39, 'red': 0.1}\n",
+      "{'yellow': 0.25, 'orange': 0.08, 'red': 0.53, 'blue': 0.05, 'green': 0.09}\n"
      ]
     }
    ],
@@ -737,8 +738,7 @@
     "for color in a_counter:\n",
     "    prob=float(a_counter[color])/sum_a\n",
     "    p_box_a[color] = prob\n",
-    "    \n",
-    "for color in a_counter:\n",
+    "for color in b_counter:\n",
     "    prob=float(b_counter[color])/sum_b\n",
     "    p_box_b[color] = prob\n",
     "\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -773,19 +773,12 @@
       "Counter({'blue': 39, 'green': 27, 'orange': 23, 'red': 10, 'yellow': 1})\n",
       "Balls in Box B:\n",
       "Counter({'red': 53, 'yellow': 25, 'green': 9, 'orange': 8, 'blue': 5})\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'dict' and 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-48eddd7972de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcolor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcolors\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"A %s ball most likely came from %s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlikeliest_box\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-96-48eddd7972de>\u001b[0m in \u001b[0;36mlikeliest_box\u001b[0;34m(color)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# P(box A | color) is proportional to P(color | box A) * P(box A)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Hint use the prior_box_a variable and the p_box_a counter from the cell above.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mp_box_a_color\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_box_a\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mprior_box_a\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mp_box_b_color\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_box_b\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mprior_box_b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'float'"
+      "\n",
+      "A red ball most likely came from Box B\n",
+      "A green ball most likely came from Box A\n",
+      "A blue ball most likely came from Box A\n",
+      "A yellow ball most likely came from Box B\n",
+      "A orange ball most likely came from Box A\n"
      ]
     }
    ],
@@ -801,14 +794,12 @@
     "\n",
     "    # P(box A | color) is proportional to P(color | box A) * P(box A)\n",
     "    # Hint use the prior_box_a variable and the p_box_a counter from the cell above.\n",
-    "    for \n",
-    "    p_box_a_color = p_box_a*prior_box_a\n",
-    "    p_box_b_color = p_box_b*prior_box_b\n",
+    "    ratio = p_box_a[color] * prior_box_a / (p_box_b[color] * prior_box_b) \n",
     "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement\n",
     "    # such that likely_box is assigned Box A if the ball came most likely from Box A\n",
     "    # and Box B if it most likely came from the other box.\n",
-    "    if p_box_a_color>=p_box_b_color:\n",
+    "    if ratio > 1:\n",
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
@@ -849,11 +840,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balls in Box A:\n",
+      "Counter({'blue': 39, 'green': 27, 'orange': 23, 'red': 10, 'yellow': 1})\n",
+      "Balls in Box B:\n",
+      "Counter({'red': 53, 'yellow': 25, 'green': 9, 'orange': 8, 'blue': 5})\n",
+      "\n",
+      "The sequence red most likely came from Box B\n",
+      "The sequence green most likely came from Box A\n",
+      "The sequence blue most likely came from Box A\n",
+      "The sequence yellow most likely came from Box B\n",
+      "The sequence orange most likely came from Box A\n",
+      "The sequence red, red, green most likely came from Box B\n",
+      "The sequence red, green, green most likely came from Box A\n",
+      "The sequence blue, red, green, yellow, blue, yellow, yellow most likely came from Box B\n",
+      "The sequence yellow, orange most likely came from Box B\n",
+      "The sequence yellow, green most likely came from Box B\n",
+      "The sequence yellow, green, green, green, green most likely came from Box A\n"
+     ]
+    }
+   ],
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
@@ -868,15 +880,19 @@
     "    # P(box A | color1, color2, color3, ...) is proportional to \n",
     "    #      P(box A) * P(color1 | box A)  * P(color2 | box A) * P(color3 | box A) * ...\n",
     "    # Hint use the prior_box_a variable and the p_box_a counter from above.\n",
-    "    p_box_a_colors = ...\n",
-    "    p_box_b_colors = ...\n",
-    "\n",
+    "    \n",
+    "    p_box_a_colors = prior_box_a\n",
+    "    p_box_b_colors = prior_box_b\n",
+    "    \n",
     "    for color in colors:\n",
-    "        ...\n",
-    "        ...\n",
-    "\n",
+    "        p_box_a_colors *= p_box_a[color]\n",
+    "        p_box_b_colors *= p_box_b[color]\n",
+    "        \n",
+    "    ratio = p_box_a_colors/p_box_b_colors\n",
+    "        \n",
+    "        \n",
     "    # Which of the two boxes is likelier? Complete the following if statement.\n",
-    "    if __________________:\n",
+    "    if ratio>1:\n",
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
@@ -922,11 +938,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box 1 has 100 balls.\n",
+      "Box 2 has 100 balls.\n",
+      "Box 3 has 100 balls.\n",
+      "Box 4 has 100 balls.\n",
+      "The sequence red most likely came from Box 0\n",
+      "The sequence green most likely came from Box 0\n",
+      "The sequence blue most likely came from Box 0\n",
+      "The sequence yellow most likely came from Box 0\n",
+      "The sequence orange most likely came from Box 0\n",
+      "The sequence red, red, green most likely came from Box 0\n",
+      "The sequence red, green, green most likely came from Box 0\n",
+      "The sequence blue, red, green, yellow, blue, yellow, yellow most likely came from Box 0\n",
+      "The sequence yellow, orange most likely came from Box 0\n",
+      "The sequence yellow, green most likely came from Box 0\n",
+      "The sequence yellow, green, green, green, green most likely came from Box 0\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import argmax\n",
     "\n",
@@ -940,24 +976,51 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
+    "counter_2=Counter(boxes[1])\n",
+    "counter_3=Counter(boxes[2])\n",
+    "counter_4=Counter(boxes[3])\n",
+    "counter_1=Counter(boxes[0])\n",
+    "\n",
     "# Estimate the conditional probabilities for each box.\n",
     "\n",
+    "p_box_1={}\n",
+    "p_box_2={}\n",
+    "p_box_3={}\n",
+    "p_box_4={}\n",
+    "for color in counter_1:\n",
+    "    p_box_1[color]=float(counter_1[color])/len(box)\n",
+    "for color in counter_2:\n",
+    "    p_box_2[color]=float(counter_2[color])/len(box)\n",
+    "for color in counter_3:\n",
+    "    p_box_3[color]=float(counter_3[color])/len(box)\n",
+    "for color in counter_4:\n",
+    "    p_box_4[color]=float(counter_4[color])/len(box)  \n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
     "def likeliest_box(colors):\n",
     "    #### YOUR CODE STARTS HERE ####\n",
+    "    \n",
+    "    prior_box_1 = 0.25\n",
+    "    prior_box_2 = 0.25\n",
+    "    prior_box_3 = 0.25\n",
+    "    prior_box_4 = 0.25\n",
+    "    \n",
+    "    scores = {}\n",
+    "    scores[1] = prior_box_1\n",
+    "    scores[2] = prior_box_2\n",
+    "    scores[3] = prior_box_3\n",
+    "    scores[4] = prior_box_4\n",
     "\n",
-    "    priors = []\n",
-    "    for box in boxes:\n",
-    "        priors.append(1.0 / len(boxes))\n",
+    "    for color in colors:\n",
+    "        scores[1] *= p_box_1[color]\n",
+    "        scores[2] *= p_box_2[color]\n",
+    "        scores[3] *= p_box_3[color]\n",
+    "        scores[4] *= p_box_4[color]\n",
     "\n",
-    "    scores = []\n",
     "\n",
-    "    ...\n",
-    "\n",
-    "    likeliest_box = ...\n",
+    "    likeliest_box = argmax(scores)\n",
     "\n",
     "    return \"Box %d\" % likeliest_box\n",
     "\n",
@@ -975,6 +1038,13 @@
     "for seq in sequences:\n",
     "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
