--- a/lesson6_visualization.ipynb
+++ b/lesson6_visualization.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this every time you open the spreadsheet\n",
     "%load_ext autoreload\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,19 +179,66 @@
      "text": [
       "MOST DISCRIMINATIVE TOKENS: \n",
       "\n",
-      "TOKEN                P(Energy|token)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported format string passed to bytes.__format__",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-e276dd8435c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_discriminative\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtweets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprior_probs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Downloads/sailors2017-master/lib.py\u001b[0m in \u001b[0;36mmost_discriminative\u001b[0;34m(tweets, token_probs, prior_probs)\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0:20} {1:10}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"TOKEN\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"P(%s|token)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{0:20} {1:.4f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported format string passed to bytes.__format__"
+      "TOKEN                P(Energy|token)\n",
+      "dark                 0.8029\n",
+      "powers               0.8029\n",
+      "generator            0.7654\n",
+      "batteries            0.7559\n",
+      "sandysucks           0.7534\n",
+      "class                0.7534\n",
+      "flashlights          0.7345\n",
+      "masks                0.7334\n",
+      "11/3                 0.6736\n",
+      "90                   0.6707\n",
+      "\n",
+      "TOKEN                P(Food|token)\n",
+      "canned               0.9784\n",
+      "non-perishable       0.9767\n",
+      "serve                0.9663\n",
+      "perishable           0.9562\n",
+      "cook                 0.9511\n",
+      "sandwiches           0.9489\n",
+      "soup                 0.9489\n",
+      "rice                 0.9441\n",
+      "thanksgiving         0.9441\n",
+      "meal                 0.9383\n",
+      "\n",
+      "TOKEN                P(Medical|token)\n",
+      "meds                 0.8229\n",
+      "aid                  0.8008\n",
+      "4t-5t                0.7360\n",
+      "ups                  0.7360\n",
+      "ointment             0.7360\n",
+      "prescription         0.7360\n",
+      "medications          0.7360\n",
+      "medicine             0.7360\n",
+      "pull                 0.6596\n",
+      "kits                 0.6596\n",
+      "\n",
+      "TOKEN                P(None|token)\n",
+      "..                   0.9531\n",
+      "everyone             0.8955\n",
+      "last                 0.8809\n",
+      "feel                 0.8809\n",
+      "im                   0.8618\n",
+      "irene                0.8604\n",
+      "...                  0.8601\n",
+      "crazy                0.8314\n",
+      "thing                0.8314\n",
+      "tropical             0.8314\n",
+      "\n",
+      "TOKEN                P(Water|token)\n",
+      "bottled              0.9059\n",
+      "gallon               0.8307\n",
+      "jugs                 0.7970\n",
+      "water                0.7873\n",
+      "gallons              0.7266\n",
+      "parks                0.6625\n",
+      "pallets              0.6625\n",
+      "liter                0.6625\n",
+      "feet                 0.6625\n",
+      "flood                0.6625\n",
+      "\n"
      ]
     }
    ],
@@ -206,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +368,7 @@
        "    </div>\n",
        "\n",
        "    <div id=\"viz-tweet\" style=\"padding: 190px 0 0;\">\n",
-       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">non-perishaable</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.708333\" data-none=\"0.213592\" data-medical=\"0.000000\" data-energy=\"0.021739\" data-water=\"0.049505\">food</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.623106\" data-none=\"0.161812\" data-medical=\"0.590909\" data-energy=\"0.485507\" data-water=\"0.445545\">,</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.081439\" data-none=\"0.012945\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.019802\">hot</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.064394\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.007246\" data-water=\"0.009901\">meals</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.623106\" data-none=\"0.161812\" data-medical=\"0.590909\" data-energy=\"0.485507\" data-water=\"0.445545\">,</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.145833\" data-none=\"0.032362\" data-medical=\"0.090909\" data-energy=\"0.079710\" data-water=\"0.059406\">or</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.125000\" data-none=\"0.000000\" data-medical=\"0.068182\" data-energy=\"0.057971\" data-water=\"0.059406\">hygiene</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.128788\" data-none=\"0.000000\" data-medical=\"0.090909\" data-energy=\"0.065217\" data-water=\"0.069307\">products</span> <p><strong>Predicted category: </strong> <span style=\"color: orange\"> Food</span><br><strong>True category: </strong> <span style=\"color: orange\"> Food</span></p>\n",
+       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">levy</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">behind</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.090909\" data-none=\"0.142395\" data-medical=\"0.022727\" data-energy=\"0.210145\" data-water=\"0.069307\">my</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.042071\" data-medical=\"0.000000\" data-energy=\"0.050725\" data-water=\"0.019802\">house</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.128788\" data-none=\"0.210356\" data-medical=\"0.068182\" data-energy=\"0.202899\" data-water=\"0.089109\">is</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">compromised</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.036232\" data-water=\"0.000000\">due</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.410985\" data-none=\"0.233010\" data-medical=\"0.409091\" data-energy=\"0.326087\" data-water=\"0.316832\">to</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.022727\" data-none=\"0.446602\" data-medical=\"0.022727\" data-energy=\"0.369565\" data-water=\"0.009901\">#</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.041667\" data-none=\"0.482201\" data-medical=\"0.022727\" data-energy=\"0.326087\" data-water=\"0.000000\">sandy</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.034091\" data-none=\"0.679612\" data-medical=\"0.000000\" data-energy=\"0.115942\" data-water=\"0.000000\">...</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">joys</span> <span style=\"color: green\" class=\"viz-token\" data-food=\"0.043561\" data-none=\"0.077670\" data-medical=\"0.113636\" data-energy=\"0.021739\" data-water=\"0.039604\">&</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.007576\" data-none=\"0.032362\" data-medical=\"0.000000\" data-energy=\"0.036232\" data-water=\"0.019802\">now</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">risk</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.214015\" data-none=\"0.161812\" data-medical=\"0.204545\" data-energy=\"0.239130\" data-water=\"0.356436\">of</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.009901\">living</span> <span style=\"color: green\" class=\"viz-token\" data-food=\"0.032197\" data-none=\"0.029126\" data-medical=\"0.068182\" data-energy=\"0.036232\" data-water=\"0.039604\">by</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.009709\" data-medical=\"0.000000\" data-energy=\"0.007246\" data-water=\"0.000000\">beach</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.034091\" data-none=\"0.679612\" data-medical=\"0.000000\" data-energy=\"0.115942\" data-water=\"0.000000\">...</span> <p><strong>Predicted category: </strong> <span style=\"color: gray\"> None</span><br><strong>True category: </strong> <span style=\"color: gray\"> None</span></p>\n",
        "    </div>\n",
        "     <script type=\"text/javascript\">\n",
        "\t$(document).ready(function() {\n",
@@ -360,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
