--- a/lesson3_naivebayes_exercises.ipynb
+++ b/lesson3_naivebayes_exercises.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -720,8 +720,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'green': 0.27, 'yellow': 0.01, 'orange': 0.23, 'blue': 0.39, 'red': 0.1}\n",
-      "{'yellow': 0.25, 'orange': 0.08, 'red': 0.53, 'blue': 0.05, 'green': 0.09}\n"
+      "{'blue': 0.39, 'orange': 0.23, 'yellow': 0.01, 'red': 0.1, 'green': 0.27}\n",
+      "{'red': 0.53, 'orange': 0.08, 'yellow': 0.25, 'green': 0.09, 'blue': 0.05}\n"
      ]
     }
    ],
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -949,16 +949,27 @@
       "Box 2 has 100 balls.\n",
       "Box 3 has 100 balls.\n",
       "Box 4 has 100 balls.\n",
-      "The sequence red most likely came from Box 0\n",
+      "[0.025, 0.1325, 0.0375, 0.0125]\n",
+      "The sequence red most likely came from Box 1\n",
+      "[0.0675, 0.0225, 0.0075, 0.0125]\n",
       "The sequence green most likely came from Box 0\n",
+      "[0.0975, 0.0125, 0.0375, 0.0125]\n",
       "The sequence blue most likely came from Box 0\n",
-      "The sequence yellow most likely came from Box 0\n",
-      "The sequence orange most likely came from Box 0\n",
-      "The sequence red, red, green most likely came from Box 0\n",
+      "[0.0025, 0.0625, 0.16, 0.0125]\n",
+      "The sequence yellow most likely came from Box 2\n",
+      "[0.0575, 0.02, 0.0075, 0.2]\n",
+      "The sequence orange most likely came from Box 3\n",
+      "[0.0006750000000000001, 0.00632025, 0.00016874999999999998, 3.125000000000001e-05]\n",
+      "The sequence red, red, green most likely came from Box 1\n",
+      "[0.0018225000000000003, 0.00107325, 3.3749999999999994e-05, 3.125000000000001e-05]\n",
       "The sequence red, green, green most likely came from Box 0\n",
-      "The sequence blue, red, green, yellow, blue, yellow, yellow most likely came from Box 0\n",
-      "The sequence yellow, orange most likely came from Box 0\n",
-      "The sequence yellow, green most likely came from Box 0\n",
+      "[1.0266750000000003e-09, 4.658203125e-07, 6.635519999999999e-06, 1.953125000000001e-10]\n",
+      "The sequence blue, red, green, yellow, blue, yellow, yellow most likely came from Box 2\n",
+      "[0.000575, 0.005, 0.0048, 0.010000000000000002]\n",
+      "The sequence yellow, orange most likely came from Box 3\n",
+      "[0.000675, 0.005625, 0.0048, 0.0006250000000000001]\n",
+      "The sequence yellow, green most likely came from Box 1\n",
+      "[1.3286025000000003e-05, 4.100624999999999e-06, 1.2959999999999997e-07, 7.812500000000003e-08]\n",
       "The sequence yellow, green, green, green, green most likely came from Box 0\n"
      ]
     }
@@ -1007,19 +1018,19 @@
     "    prior_box_3 = 0.25\n",
     "    prior_box_4 = 0.25\n",
     "    \n",
-    "    scores = {}\n",
-    "    scores[1] = prior_box_1\n",
-    "    scores[2] = prior_box_2\n",
-    "    scores[3] = prior_box_3\n",
-    "    scores[4] = prior_box_4\n",
+    "    scores = [0] * 4\n",
+    "    scores[0] = prior_box_1\n",
+    "    scores[1] = prior_box_2\n",
+    "    scores[2] = prior_box_3\n",
+    "    scores[3] = prior_box_4\n",
     "\n",
     "    for color in colors:\n",
-    "        scores[1] *= p_box_1[color]\n",
-    "        scores[2] *= p_box_2[color]\n",
-    "        scores[3] *= p_box_3[color]\n",
-    "        scores[4] *= p_box_4[color]\n",
+    "        scores[0] *= p_box_1[color]\n",
+    "        scores[1] *= p_box_2[color]\n",
+    "        scores[2] *= p_box_3[color]\n",
+    "        scores[3] *= p_box_4[color]\n",
     "\n",
-    "\n",
+    "    print(scores)\n",
     "    likeliest_box = argmax(scores)\n",
     "\n",
     "    return \"Box %d\" % likeliest_box\n",
