add reports and format codes

--- a/lesson3_naivebayes_exercises.ipynb
+++ b/lesson3_naivebayes_exercises.ipynb
@@ -381,8 +381,8 @@
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "fruit_counter=Counter(fruit_basket)\n",
-    "print (fruit_counter)\n",
+    "fruit_counter = Counter(fruit_basket)\n",
+    "print(fruit_counter)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -430,14 +430,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_items([('1 queen-sized bed', 25), ('1 king-sized bed', 14), ('2 queen-sized beds', 12), ('Honeymoon suite', 1), ('Presidential suite', 1)])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 queen-sized bed 25\n",
+      "1 king-sized bed 14\n",
+      "2 queen-sized beds 12\n",
+      "Honeymoon suite 1\n",
+      "Presidential suite 1\n"
+     ]
     }
    ],
    "source": [
@@ -454,7 +455,8 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "hotel_rooms.items()\n",
+    "for room, count in hotel_rooms.items():\n",
+    "    print(room, count)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -515,7 +517,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "numbers = list(range(1, 11))\n",
-    "total =sum(numbers)\n",
+    "total = sum(numbers)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -613,7 +615,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "for number in numbers:\n",
-    "    print(number/2)\n",
+    "    print(number / 2)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -648,8 +650,8 @@
     "pet_counter=Counter(my_pets)\n",
     "fractions={}\n",
     "for pet in pet_counter:\n",
-    "    fraction=float(pet_counter[pet])/10\n",
-    "    fractions[pet]=fraction\n",
+    "    fraction = float(pet_counter[pet]) /10\n",
+    "    fractions[pet] = fraction\n",
     "    \n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
@@ -690,8 +692,8 @@
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "a_counter=Counter(box_a)\n",
-    "b_counter=Counter(box_b)\n",
+    "a_counter = Counter(box_a)\n",
+    "b_counter = Counter(box_b)\n",
     "print(a_counter)\n",
     "print(b_counter)\n",
     "\n",
@@ -720,8 +722,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'blue': 0.39, 'orange': 0.23, 'yellow': 0.01, 'red': 0.1, 'green': 0.27}\n",
-      "{'red': 0.53, 'orange': 0.08, 'yellow': 0.25, 'green': 0.09, 'blue': 0.05}\n"
+      "{'orange': 0.23, 'green': 0.27, 'blue': 0.39, 'red': 0.1, 'yellow': 0.01}\n",
+      "{'red': 0.53, 'yellow': 0.25, 'green': 0.09, 'orange': 0.08, 'blue': 0.05}\n"
      ]
     }
    ],
@@ -730,17 +732,16 @@
     "\n",
     "# Hint: This is very similar to Exercise 8.\n",
     "\n",
-    "sum_a=sum(a_counter.values())\n",
-    "sum_b=sum(b_counter.values())\n",
+    "sum_a = sum(a_counter.values())\n",
+    "sum_b = sum(b_counter.values())\n",
     "\n",
-    "p_box_a={}\n",
-    "p_box_b={}\n",
+    "p_box_a = {}\n",
+    "p_box_b = {}\n",
     "for color in a_counter:\n",
-    "    prob=float(a_counter[color])/sum_a\n",
-    "    p_box_a[color] = prob\n",
+    "    p_box_a[color] = float(a_counter[color]) / sum_a\n",
+    "    \n",
     "for color in b_counter:\n",
-    "    prob=float(b_counter[color])/sum_b\n",
-    "    p_box_b[color] = prob\n",
+    "    p_box_b[color] = float(b_counter[color]) / sum_b\n",
     "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
@@ -888,11 +889,11 @@
     "        p_box_a_colors *= p_box_a[color]\n",
     "        p_box_b_colors *= p_box_b[color]\n",
     "        \n",
-    "    ratio = p_box_a_colors/p_box_b_colors\n",
+    "    ratio = p_box_a_colors / p_box_b_colors\n",
     "        \n",
     "        \n",
     "    # Which of the two boxes is likelier? Complete the following if statement.\n",
-    "    if ratio>1:\n",
+    "    if ratio > 1:\n",
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -987,25 +988,26 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "counter_2=Counter(boxes[1])\n",
-    "counter_3=Counter(boxes[2])\n",
-    "counter_4=Counter(boxes[3])\n",
-    "counter_1=Counter(boxes[0])\n",
+    "counter_1 = Counter(boxes[0])\n",
+    "counter_2 = Counter(boxes[1])\n",
+    "counter_3 = Counter(boxes[2])\n",
+    "counter_4 = Counter(boxes[3])\n",
     "\n",
     "# Estimate the conditional probabilities for each box.\n",
     "\n",
-    "p_box_1={}\n",
-    "p_box_2={}\n",
-    "p_box_3={}\n",
-    "p_box_4={}\n",
+    "p_box_1 = {}\n",
+    "p_box_2 = {}\n",
+    "p_box_3 = {}\n",
+    "p_box_4 = {}\n",
+    "\n",
     "for color in counter_1:\n",
-    "    p_box_1[color]=float(counter_1[color])/len(box)\n",
+    "    p_box_1[color] = float(counter_1[color]) / len(boxes[0])\n",
     "for color in counter_2:\n",
-    "    p_box_2[color]=float(counter_2[color])/len(box)\n",
+    "    p_box_2[color] = float(counter_2[color]) / len(boxes[1])\n",
     "for color in counter_3:\n",
-    "    p_box_3[color]=float(counter_3[color])/len(box)\n",
+    "    p_box_3[color] = float(counter_3[color]) / len(boxes[2])\n",
     "for color in counter_4:\n",
-    "    p_box_4[color]=float(counter_4[color])/len(box)  \n",
+    "    p_box_4[color] = float(counter_4[color]) / len(boxes[3]) \n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
@@ -1075,9 +1077,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
