--- a/lesson4_languagemodel.ipynb
+++ b/lesson4_languagemodel.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +34,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package movie_reviews to\n",
-      "[nltk_data]     /Users/piaochuxin/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
+      "[nltk_data]     /Users/xiaoxing/nltk_data...\n",
+      "[nltk_data]   Package movie_reviews is already up-to-date!\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,10 +97,10 @@
     "\n",
     "\n",
     "# Step 1: Make a Counter from the list of words and call it \"unigram_counts\" (remember, this is easy to do!)\n",
-    "unigram_counts=Counter(words)\n",
+    "unigram_counts = Counter(words)\n",
     "\n",
     "# Step 2: Get the total number of words and assign it to \"total_count\"\n",
-    "total_count=sum(unigram_counts.values())\n",
+    "total_count = sum(unigram_counts.values())\n",
     "\n",
     "print(\"Total number of words in corpus: \", total_count)\n",
     "\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +144,14 @@
     "\n",
     "\n",
     "# Step 1: create an empty Counter called unigram_probs.\n",
-    "unigram_probs={}\n",
+    "unigram_probs = {}\n",
     "\n",
     "# Step 2: using a for-loop over unigram_counts, (this will iterate over the keys i.e. words)\n",
     "# calculate the appropriate fraction, and add the word -> fraction pair to unigram_probs.\n",
     "# Remember about integer division!\n",
     "for word in unigram_counts:\n",
-    "    fraction=float(unigram_counts[word])/10\n",
-    "    unigram_probs[word]=fraction\n",
+    "    fraction = float(unigram_counts[word])/10\n",
+    "    unigram_probs[word] = fraction\n",
     "\n",
     "# Check the probabilities add up to 1\n",
     "print(\"Probabilities sum to: \", sum(unigram_probs.values()))\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the world than by the violent , after a colonel with characters and a director makes it even the streets for sean dies .\n"
+      "s no genius , for me to drop down a half hour running away myself included as the cast is being interesting about henstridge )\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there are still having his own direction .\n"
+      "instead of refreshing the audience with information dug up by the fact that margaret does not borrow from a mile away .\n"
      ]
     }
    ],
@@ -505,9 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "How does the trigram text compare to the bigram text?\n",
     "\n",
@@ -544,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
