--- a/filled/lesson5_naivebayes.ipynb
+++ b/filled/lesson5_naivebayes.ipynb
@@ -37,9 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Learn a Naive Bayes classifier\n",
     "\n",
@@ -196,9 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### See what your model has learnt"
    ]
@@ -4580,9 +4576,10 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
