--- a/lesson6_visualization.ipynb
+++ b/lesson6_visualization.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
     "%load_ext autoreload\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,12 +175,12 @@
       "powers               0.8029\n",
       "generator            0.7654\n",
       "batteries            0.7559\n",
-      "sandysucks           0.7534\n",
       "class                0.7534\n",
+      "sandysucks           0.7534\n",
       "flashlights          0.7345\n",
       "masks                0.7334\n",
       "11/3                 0.6736\n",
-      "90                   0.6707\n",
+      "cleaner              0.6707\n",
       "\n",
       "TOKEN                P(Food|token)\n",
       "canned               0.9784\n",
@@ -197,8 +188,8 @@
       "serve                0.9663\n",
       "perishable           0.9562\n",
       "cook                 0.9511\n",
-      "sandwiches           0.9489\n",
       "soup                 0.9489\n",
+      "sandwiches           0.9489\n",
       "rice                 0.9441\n",
       "thanksgiving         0.9441\n",
       "meal                 0.9383\n",
@@ -206,14 +197,14 @@
       "TOKEN                P(Medical|token)\n",
       "meds                 0.8229\n",
       "aid                  0.8008\n",
-      "4t-5t                0.7360\n",
       "ups                  0.7360\n",
-      "ointment             0.7360\n",
-      "prescription         0.7360\n",
       "medications          0.7360\n",
+      "prescription         0.7360\n",
+      "4t-5t                0.7360\n",
+      "ointment             0.7360\n",
       "medicine             0.7360\n",
-      "pull                 0.6596\n",
       "kits                 0.6596\n",
+      "pull                 0.6596\n",
       "\n",
       "TOKEN                P(None|token)\n",
       "..                   0.9531\n",
@@ -223,9 +214,9 @@
       "im                   0.8618\n",
       "irene                0.8604\n",
       "...                  0.8601\n",
-      "crazy                0.8314\n",
-      "thing                0.8314\n",
       "tropical             0.8314\n",
+      "halloween            0.8314\n",
+      "finally              0.8314\n",
       "\n",
       "TOKEN                P(Water|token)\n",
       "bottled              0.9059\n",
@@ -233,11 +224,11 @@
       "jugs                 0.7970\n",
       "water                0.7873\n",
       "gallons              0.7266\n",
-      "parks                0.6625\n",
-      "pallets              0.6625\n",
-      "liter                0.6625\n",
-      "feet                 0.6625\n",
       "flood                0.6625\n",
+      "pallets              0.6625\n",
+      "spring               0.6625\n",
+      "feet                 0.6625\n",
+      "parks                0.6625\n",
       "\n"
      ]
     }
@@ -262,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +359,7 @@
        "    </div>\n",
        "\n",
        "    <div id=\"viz-tweet\" style=\"padding: 190px 0 0;\">\n",
-       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">levy</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">behind</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.090909\" data-none=\"0.142395\" data-medical=\"0.022727\" data-energy=\"0.210145\" data-water=\"0.069307\">my</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.042071\" data-medical=\"0.000000\" data-energy=\"0.050725\" data-water=\"0.019802\">house</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.128788\" data-none=\"0.210356\" data-medical=\"0.068182\" data-energy=\"0.202899\" data-water=\"0.089109\">is</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">compromised</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.036232\" data-water=\"0.000000\">due</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.410985\" data-none=\"0.233010\" data-medical=\"0.409091\" data-energy=\"0.326087\" data-water=\"0.316832\">to</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.022727\" data-none=\"0.446602\" data-medical=\"0.022727\" data-energy=\"0.369565\" data-water=\"0.009901\">#</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.041667\" data-none=\"0.482201\" data-medical=\"0.022727\" data-energy=\"0.326087\" data-water=\"0.000000\">sandy</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.034091\" data-none=\"0.679612\" data-medical=\"0.000000\" data-energy=\"0.115942\" data-water=\"0.000000\">...</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">joys</span> <span style=\"color: green\" class=\"viz-token\" data-food=\"0.043561\" data-none=\"0.077670\" data-medical=\"0.113636\" data-energy=\"0.021739\" data-water=\"0.039604\">&</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.007576\" data-none=\"0.032362\" data-medical=\"0.000000\" data-energy=\"0.036232\" data-water=\"0.019802\">now</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">risk</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.214015\" data-none=\"0.161812\" data-medical=\"0.204545\" data-energy=\"0.239130\" data-water=\"0.356436\">of</span> <span style=\"color: blue\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.006472\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.009901\">living</span> <span style=\"color: green\" class=\"viz-token\" data-food=\"0.032197\" data-none=\"0.029126\" data-medical=\"0.068182\" data-energy=\"0.036232\" data-water=\"0.039604\">by</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.009709\" data-medical=\"0.000000\" data-energy=\"0.007246\" data-water=\"0.000000\">beach</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.034091\" data-none=\"0.679612\" data-medical=\"0.000000\" data-energy=\"0.115942\" data-water=\"0.000000\">...</span> <p><strong>Predicted category: </strong> <span style=\"color: gray\"> None</span><br><strong>True category: </strong> <span style=\"color: gray\"> None</span></p>\n",
+       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.001894\" data-none=\"0.051780\" data-medical=\"0.000000\" data-energy=\"0.021739\" data-water=\"0.000000\">nyc</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.003236\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">looks</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">strange</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.005682\" data-none=\"0.022654\" data-medical=\"0.000000\" data-energy=\"0.021739\" data-water=\"0.000000\">right</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.007576\" data-none=\"0.032362\" data-medical=\"0.000000\" data-energy=\"0.036232\" data-water=\"0.019802\">now</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.022727\" data-none=\"0.446602\" data-medical=\"0.022727\" data-energy=\"0.369565\" data-water=\"0.009901\">#</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.041667\" data-none=\"0.482201\" data-medical=\"0.022727\" data-energy=\"0.326087\" data-water=\"0.000000\">sandy</span> <p><strong>Predicted category: </strong> <span style=\"color: gray\"> None</span><br><strong>True category: </strong> <span style=\"color: gray\"> None</span></p>\n",
        "    </div>\n",
        "     <script type=\"text/javascript\">\n",
        "\t$(document).ready(function() {\n",
@@ -416,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -481,6 +472,61 @@
     "\n",
     "Repeat this exercise for all the other categories. Based on your observations, do you have any ideas on how to further improve the classifier?\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div id=\"viz-overlay\" style=\"display:none;position:absolute;width:250px;height:110px;border: 1px solid #000; padding:8px;  background: #eee;\">\n",
+       "\t<p>\n",
+       "       <span style=\"color:orange;\">P(<span class=\"viz-token-placeholder\"></span> | food) = <span id=\"viz-p-food\"></span></span><br>\n",
+       "\t   <span style=\"color:blue;\">P(<span class=\"viz-token-placeholder\"></span> | water) = <span id=\"viz-p-water\"></span><br>\n",
+       "\t   <span style=\"color:green;\">P(<span class=\"viz-token-placeholder\"></span> | medical) = <span id=\"viz-p-medical\"></span><br>\n",
+       "\t   <span style=\"color:red;\">P(<span class=\"viz-token-placeholder\"></span> | energy) = <span id=\"viz-p-energy\"></span><br>\n",
+       "\t   <span style=\"color:gray;\">P(<span class=\"viz-token-placeholder\"></span> | none) = <span id=\"viz-p-none\"></span></p>\n",
+       "    </p>\n",
+       "    </div>\n",
+       "\n",
+       "    <div id=\"viz-tweet\" style=\"padding: 190px 0 0;\">\n",
+       "    <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">milks</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.121212\" data-none=\"0.058252\" data-medical=\"0.136364\" data-energy=\"0.144928\" data-water=\"0.029703\">are</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: red\" class=\"viz-token\" data-food=\"0.003788\" data-none=\"0.045307\" data-medical=\"0.000000\" data-energy=\"0.362319\" data-water=\"0.000000\">batteries</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.000000\" data-none=\"0.000000\" data-medical=\"0.000000\" data-energy=\"0.000000\" data-water=\"0.000000\">powering</span> <span style=\"color: gray\" class=\"viz-token\" data-food=\"0.140152\" data-none=\"0.404531\" data-medical=\"0.204545\" data-energy=\"0.282609\" data-water=\"0.158416\">the</span> <span style=\"color: green\" class=\"viz-token\" data-food=\"0.001894\" data-none=\"0.012945\" data-medical=\"0.022727\" data-energy=\"0.014493\" data-water=\"0.009901\">life</span> <span style=\"color: orange\" class=\"viz-token\" data-food=\"0.596591\" data-none=\"0.453074\" data-medical=\"0.477273\" data-energy=\"0.543478\" data-water=\"0.544554\">.</span> <p><strong>Predicted category: </strong> <span style=\"color: red\"> Energy</span><br><strong>True category: </strong> <span style=\"color: black\"> ?</span></p>\n",
+       "    </div>\n",
+       "     <script type=\"text/javascript\">\n",
+       "\t$(document).ready(function() {\n",
+       "\t\t$(\"span.viz-token\").mouseover(function() {\n",
+       "\t\t\t$(\"span.viz-token\").css({\"font-weight\": \"normal\"});\n",
+       "\t\t\t$(this).css({\"font-weight\": \"bold\"});\n",
+       "\t\t\t$(\"span.viz-token-placeholder\").text($(this).text());\n",
+       "\t\t\t$(\"#viz-p-food\").text($(this).data(\"food\"));\n",
+       "\t\t\t$(\"#viz-p-water\").text($(this).data(\"water\"));\n",
+       "\t\t\t$(\"#viz-p-medical\").text($(this).data(\"medical\"));\n",
+       "\t\t\t$(\"#viz-p-energy\").text($(this).data(\"energy\"));\n",
+       "\t\t\t$(\"#viz-p-none\").text($(this).data(\"none\"));\n",
+       "\t\t\t$(\"#viz-overlay\").show();\n",
+       "\t\t\t$(\"#viz-overlay\").offset({left:$(this).offset().left-110+$(this).width()/2, top:$(this).offset().top - 140});\n",
+       "\t\t});\n",
+       "\t});\n",
+       "    </script>\n",
+       "\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "my_tweet = \"Milks are the batteries powering the life.\"  # Food but assigned to energy.\n",
+    "\n",
+    "lib.visualize_tweet(lib.Tweet(my_tweet, \"?\", \"\"), prior_probs, token_probs)\n"
+   ]
   }
  ],
  "metadata": {
@@ -500,9 +546,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
